--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "6.0.0",
   "description": "https everywhere ruleset builder for Brave",
   "dependencies": {
-    "level": "^6.0.1",
-    "s3-client": "^4.4.2"
+    "aws-sdk": "^2.656.0",
+    "level": "^6.0.1"
   },
   "scripts": {
     "build": "node scripts/preloadHTTPSE.js",
